--- a/HackerRankMobile/Makestagram.storyboard
+++ b/HackerRankMobile/Makestagram.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="OZy-sn-TVV">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="OZy-sn-TVV">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,7 +22,7 @@
                     <connections>
                         <segue destination="sLP-sP-1TC" kind="relationship" relationship="viewControllers" id="7xH-Pi-Gza"/>
                         <segue destination="pbr-1q-dbu" kind="relationship" relationship="viewControllers" id="gry-NE-9jz"/>
-                        <segue destination="iCK-O1-mi6" kind="relationship" relationship="viewControllers" id="Soi-lC-Vud"/>
+                        <segue destination="fQQ-MW-awQ" kind="relationship" relationship="viewControllers" id="Soi-lC-Vud"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ncb-ww-lRz" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -43,7 +43,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="ZfZ-16-ZY7"/>
                     </view>
-                    <tabBarItem key="tabBarItem" tag="1" title="Add Image" selectedImage="tab_plus_black" id="Obw-oo-omm">
+                    <tabBarItem key="tabBarItem" tag="1" title="Add Image" image="tab_plus_black" selectedImage="tab_plus_black" id="Obw-oo-omm">
                         <inset key="imageInsets" minX="0.0" minY="7" maxX="0.0" maxY="-7"/>
                     </tabBarItem>
                 </viewController>
@@ -51,7 +51,7 @@
             </objects>
             <point key="canvasLocation" x="2903" y="252"/>
         </scene>
-        <!--Find Friends-->
+        <!--Find Friends View Controller-->
         <scene sceneID="dco-SY-j6Y">
             <objects>
                 <viewController id="iCK-O1-mi6" customClass="FindFriendsViewController" customModule="HackerRankMobile" customModuleProvider="target" sceneMemberID="viewController">
@@ -65,27 +65,47 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="RZu-qa-fEE"/>
                     </view>
-                    <tabBarItem key="tabBarItem" tag="2" title="Find Friends" selectedImage="tab_find_friends_black" id="HeM-c0-rzd">
-                        <inset key="imageInsets" minX="0.0" minY="7" maxX="0.0" maxY="-7"/>
-                    </tabBarItem>
+                    <navigationItem key="navigationItem" id="k90-fY-mvA"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rtk-Xl-THQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2903" y="913"/>
+            <point key="canvasLocation" x="3690" y="912"/>
         </scene>
         <!--Home-->
         <scene sceneID="6fB-Jh-AIf">
             <objects>
                 <viewControllerPlaceholder storyboardName="Home" id="sLP-sP-1TC" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="yca-Nb-o9f"/>
+                    <tabBarItem key="tabBarItem" title="Item" image="tab_home_black" selectedImage="tab_home_black" id="yca-Nb-o9f"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E6c-p4-IcQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2902.4000000000001" y="-408.39580209895058"/>
         </scene>
+        <!--Find Friends-->
+        <scene sceneID="tzp-dN-Qvb">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fQQ-MW-awQ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" tag="2" title="Find Friends" image="tab_find_friends_black" selectedImage="tab_find_friends_black" id="HeM-c0-rzd">
+                        <inset key="imageInsets" minX="0.0" minY="7" maxX="0.0" maxY="-7"/>
+                    </tabBarItem>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qZd-il-owW">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="iCK-O1-mi6" kind="relationship" relationship="rootViewController" id="gKB-fO-NQd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NTX-Tb-PgA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2902.4000000000001" y="912.14392803598207"/>
+        </scene>
     </scenes>
     <resources>
         <image name="tab_find_friends_black" width="25" height="25"/>
+        <image name="tab_home_black" width="25" height="25"/>
         <image name="tab_plus_black" width="25" height="25"/>
     </resources>
 </document>
