--- a/HackerRankMobile/Home.storyboard
+++ b/HackerRankMobile/Home.storyboard
@@ -34,7 +34,7 @@
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y3N-Ez-NWO">
-                                                        <rect key="frame" x="30" y="11" width="76" height="32"/>
+                                                        <rect key="frame" x="15" y="11" width="76" height="32"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -57,7 +57,7 @@
                                                     <constraint firstItem="MIw-6j-hd6" firstAttribute="centerY" secondItem="1Ds-yA-frv" secondAttribute="centerY" id="YnG-M3-4wx"/>
                                                     <constraint firstItem="MIw-6j-hd6" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="y3N-Ez-NWO" secondAttribute="trailing" constant="15" id="oh2-9y-Lf2"/>
                                                     <constraint firstAttribute="bottomMargin" secondItem="y3N-Ez-NWO" secondAttribute="bottom" id="unS-Lc-cQi"/>
-                                                    <constraint firstItem="y3N-Ez-NWO" firstAttribute="leading" secondItem="1Ds-yA-frv" secondAttribute="leadingMargin" constant="15" id="y3a-Yy-qbH"/>
+                                                    <constraint firstItem="y3N-Ez-NWO" firstAttribute="leading" secondItem="1Ds-yA-frv" secondAttribute="leadingMargin" id="y3a-Yy-qbH"/>
                                                 </constraints>
                                             </tableViewCellContentView>
                                             <connections>
@@ -180,7 +180,7 @@
                     </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="wbE-V5-WMp">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="48"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
