--- a/HackerRankMobile/Base.lproj/Login.storyboard
+++ b/HackerRankMobile/Base.lproj/Login.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="CB7-Fr-2Ss">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="6ah-Ns-TKZ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,7 +22,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9j9-DQ-uZe">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Mosaic" translatesAutoresizingMaskIntoConstraints="NO" id="tz7-p0-4oh">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <visualEffectView opaque="NO" alpha="0.94999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bzY-3I-Q3f">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="D5y-mv-77Y">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </view>
+                                <blurEffect style="light"/>
+                            </visualEffectView>
+                            <view alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9j9-DQ-uZe">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="283"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="gsF-AE-osM">
@@ -34,7 +45,7 @@
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Take pictures &amp; shit." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vm6-3v-Wve">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Take pictures. Post Them." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vm6-3v-Wve">
                                                 <rect key="frame" x="1.5" y="73" width="240" height="18"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="240" id="IZh-ZF-42z"/>
@@ -53,7 +64,7 @@
                                     <constraint firstItem="gsF-AE-osM" firstAttribute="centerY" secondItem="9j9-DQ-uZe" secondAttribute="centerY" id="vRT-Dy-frU"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L1U-en-uzD">
+                            <button opaque="NO" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L1U-en-uzD">
                                 <rect key="frame" x="51" y="308" width="273" height="44"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -68,11 +79,19 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="bzY-3I-Q3f" secondAttribute="trailing" id="5nh-24-jW0"/>
+                            <constraint firstItem="bzY-3I-Q3f" firstAttribute="leading" secondItem="hJf-Yu-zjv" secondAttribute="leading" id="E37-XI-WrG"/>
+                            <constraint firstItem="Fbq-Rn-JVt" firstAttribute="top" secondItem="bzY-3I-Q3f" secondAttribute="bottom" id="LDN-9l-0vy"/>
                             <constraint firstItem="9j9-DQ-uZe" firstAttribute="top" secondItem="ddS-uf-cBT" secondAttribute="bottom" constant="-20" id="NKe-mv-eye"/>
+                            <constraint firstItem="tz7-p0-4oh" firstAttribute="leading" secondItem="hJf-Yu-zjv" secondAttribute="leading" id="TUi-yk-Foc"/>
+                            <constraint firstItem="Fbq-Rn-JVt" firstAttribute="top" secondItem="tz7-p0-4oh" secondAttribute="bottom" id="lfK-L1-UVF"/>
+                            <constraint firstItem="bzY-3I-Q3f" firstAttribute="top" secondItem="hJf-Yu-zjv" secondAttribute="top" id="ngQ-Dg-gvu"/>
                             <constraint firstItem="L1U-en-uzD" firstAttribute="leading" secondItem="hJf-Yu-zjv" secondAttribute="leadingMargin" constant="35" id="p1V-tD-XrC"/>
                             <constraint firstItem="9j9-DQ-uZe" firstAttribute="leading" secondItem="hJf-Yu-zjv" secondAttribute="leadingMargin" constant="-16" id="pS1-PE-Mds"/>
                             <constraint firstAttribute="trailingMargin" secondItem="9j9-DQ-uZe" secondAttribute="trailing" constant="-16" id="sJy-lf-yv3"/>
+                            <constraint firstAttribute="trailing" secondItem="tz7-p0-4oh" secondAttribute="trailing" id="tWu-mt-3SF"/>
                             <constraint firstItem="L1U-en-uzD" firstAttribute="top" secondItem="9j9-DQ-uZe" secondAttribute="bottom" constant="25" id="v0f-4Z-ZNs"/>
+                            <constraint firstItem="tz7-p0-4oh" firstAttribute="top" secondItem="hJf-Yu-zjv" secondAttribute="top" id="xD1-cS-6fY"/>
                             <constraint firstAttribute="trailingMargin" secondItem="L1U-en-uzD" secondAttribute="trailing" constant="35" id="zbE-1C-Yne"/>
                         </constraints>
                     </view>
@@ -168,13 +187,13 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="6ah-Ns-TKZ" kind="relationship" relationship="rootViewController" id="xWt-Hf-hdf"/>
-                    </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ERE-ac-ga4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-274.39999999999998" y="204.64767616191907"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Mosaic" width="1536" height="1152"/>
+    </resources>
 </document>
