--- a/HackerRankMobile/Base.lproj/Main.storyboard
+++ b/HackerRankMobile/Base.lproj/Main.storyboard
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="WRs-B5-sAy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="beJ-pG-Go7">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
-        <scene sceneID="dgO-lS-hRT">
+        <scene sceneID="qyg-gv-yAf">
             <objects>
-                <navigationController storyboardIdentifier="InitialController" id="WRs-B5-sAy" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="IZr-ro-ook">
+                <navigationController id="beJ-pG-Go7" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="72o-NT-lVf">
                         <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="2Of-od-mCy" kind="relationship" relationship="rootViewController" id="gYS-wf-Sso"/>
+                        <segue destination="2Of-od-mCy" kind="relationship" relationship="rootViewController" id="7Js-m2-izs"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="BAg-NJ-p7J" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IYl-yo-1EY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-367" y="80"/>
+            <point key="canvasLocation" x="-354" y="80"/>
         </scene>
         <!--Main View Controller-->
         <scene sceneID="lb9-T1-WPC">
@@ -41,34 +41,42 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="8HS-62-UXD">
                                 <rect key="frame" x="0.0" y="64" width="414" height="672"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="JQI-eW-sF6">
-                                    <size key="itemSize" width="150" height="150"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" sectionInsetReference="safeArea" id="JQI-eW-sF6">
+                                    <size key="itemSize" width="350" height="150"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ReuseID" id="EZQ-41-jTh" customClass="CustomCollectionViewCell" customModule="HackerRankMobile" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                        <rect key="frame" x="32" y="0.0" width="350" height="150"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="350" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FSZ-GF-n45">
+                                                    <rect key="frame" x="8" y="8" width="334" height="134"/>
+                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qCF-AK-a6t">
-                                                    <rect key="frame" x="52" y="65" width="46.666666666666657" height="20.666666666666671"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
+                                                    <rect key="frame" x="18" y="96" width="79.333333333333329" height="36"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="30"/>
                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </view>
-                                        <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstItem="qCF-AK-a6t" firstAttribute="centerY" secondItem="EZQ-41-jTh" secondAttribute="centerY" id="9NU-si-Qh6"/>
-                                            <constraint firstItem="qCF-AK-a6t" firstAttribute="centerX" secondItem="EZQ-41-jTh" secondAttribute="centerX" id="zBk-2R-aRH"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="FSZ-GF-n45" secondAttribute="bottom" id="2os-Iw-Tbq"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="qCF-AK-a6t" secondAttribute="bottom" constant="10" id="5HC-2C-gnM"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="FSZ-GF-n45" secondAttribute="trailing" id="9VT-Qv-04g"/>
+                                            <constraint firstItem="FSZ-GF-n45" firstAttribute="top" secondItem="EZQ-41-jTh" secondAttribute="topMargin" id="AkW-Z6-joq"/>
+                                            <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="qCF-AK-a6t" secondAttribute="trailing" id="aOK-p5-piI"/>
+                                            <constraint firstItem="qCF-AK-a6t" firstAttribute="leading" secondItem="EZQ-41-jTh" secondAttribute="leadingMargin" constant="10" id="dd7-xg-OPm"/>
+                                            <constraint firstItem="FSZ-GF-n45" firstAttribute="leading" secondItem="EZQ-41-jTh" secondAttribute="leadingMargin" id="u9U-Mj-quJ"/>
                                         </constraints>
                                         <connections>
+                                            <outlet property="imageView" destination="FSZ-GF-n45" id="HvU-aV-eOi"/>
                                             <outlet property="mainLabel" destination="qCF-AK-a6t" id="v13-AQ-fDu"/>
                                         </connections>
                                     </collectionViewCell>
@@ -98,7 +106,7 @@
                         <segue destination="BIi-RA-nsn" kind="show" identifier="transitionToMapView" id="uKs-zA-7hN"/>
                         <segue destination="wao-v9-Gtx" kind="show" identifier="transitionToDataStructures" id="5b3-VX-yqQ"/>
                         <segue destination="Hd5-aQ-4Z2" kind="show" identifier="transitionToLoginStoryboard" id="61W-p0-ZGU"/>
-                        <segue destination="Y7i-N9-RP5" kind="show" identifier="transitionToMakestagram" id="tf8-ha-3LT"/>
+                        <segue destination="Y7i-N9-RP5" kind="show" identifier="transitionToLukestagram" id="tf8-ha-3LT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u7D-qi-IKL" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -113,10 +121,10 @@
             </objects>
             <point key="canvasLocation" x="1221" y="233"/>
         </scene>
-        <!--Makestagram-->
+        <!--Lukestagram-->
         <scene sceneID="Xrm-mG-QpB">
             <objects>
-                <viewControllerPlaceholder storyboardName="Makestagram" id="Y7i-N9-RP5" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="Lukestagram" id="Y7i-N9-RP5" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="koi-xg-r0r" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1225" y="319"/>
